[package]
name = "wasm-webgpu-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["panic_hook"]
panic_hook = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
serde = { version = "1.0.183", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
